Tests for main and the cli inputs